<resources>
    <string name="app_name">Simon Game</string>
    <string name="welcome_text">Welcome! Please enter your username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="start_game">Start Game</string>
    <string name="yellow_button">Yellow button</string>
    <string name="green_button">Green button</string>
    <string name="score_0">Score: 0</string>
    <string name="red_button">Red button</string>
    <string name="blue_button">Blue button</string>
    <string name="top_scores">Top Scores</string>
</resources>