<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:rowCount="2"
        android:columnCount="2"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGreen"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/button_green"
            android:contentDescription="@string/green_button"
            android:elevation="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRed"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/button_red"
            android:contentDescription="@string/red_button"
            android:elevation="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBlue"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/button_blue"
            android:contentDescription="@string/blue_button"
            android:elevation="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonYellow"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/button_yellow"
            android:contentDescription="@string/yellow_button"
            android:elevation="8dp" />
    </GridLayout>
</RelativeLayout>